gospel/tests/negative/t10.mli

(*@ use T9 *)

(* ERROR: should fail when loading T9 *)
